--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   uuid: ^3.0.4
   google_fonts: ^2.1.0
+  flutter_hooks: ^0.18.0
+  hooks_riverpod: ^1.0.0-dev.7
+  state_notifier: ^0.7.0
 
 dev_dependencies:
   flutter_test:
